<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/award"
        android:textColor="#616A6B"
        android:textSize="12sp" />

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/ttlscore_100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100 points"
                    android:textColor="#3498DB"
                    android:textSize="12sp" />
                <RadioButton
                    android:id="@+id/ttlscore_200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="200 points"
                    android:textColor="#3498DB"
                    android:textSize="12sp" />
                <RadioButton
                    android:id="@+id/ttlscore_300"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="300 points"
                    android:textColor="#3498DB"
                    android:textSize="12sp" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/awardtxt2"
                android:textColor="#616A6B" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/awardtxt2"
                android:textColor="#616A6B" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12dp"

                android:text="@string/awardtxt3"
                android:textColor="#616A6B" />
        </LinearLayout>
    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/ttlscore_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100 points"
            android:textColor="#3498DB"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:layout_marginLeft="50dp"
            android:text="@string/awardtxt1"
            android:textColor="#616A6B" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/ttlscore_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="200 points"
            android:textColor="#3498DB"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textSize="12dp"
            android:text="@string/awardtxt2"
            android:textColor="#616A6B" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/ttlscore_300"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="300 points"
            android:textColor="#3498DB"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="12dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="10dp"
            android:text="@string/awardtxt3"
            android:textColor="#616A6B" />
    </LinearLayout>
</LinearLayout>